--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,13 @@
 		<stella.version>2.1.0</stella.version>
 		<jsf.version>2.2.2</jsf.version>
 		<servlet.version>3.0.1</servlet.version>
+		<jstl.version>1.2</jstl.version>
 		<rewrite.version>2.0.12.Final</rewrite.version>
 		<primefaces.version>5.1</primefaces.version>
 		<primefaces.theme.version>1.0.10</primefaces.theme.version>
 		<mysql.version>5.1.17</mysql.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
+		<slf4j.version>1.6.1</slf4j.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -106,6 +108,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+
 		<!-- Primefaces dependency -->
 		<dependency>
 			<groupId>org.primefaces</groupId>
@@ -130,6 +138,13 @@
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>${c3p0.version}</version>
+		</dependency>
+		
+		<!-- slf4j-log4j -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
 		</dependency>
 	</dependencies>
 </project>
