--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<mysql.version>5.1.17</mysql.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<slf4j.version>1.6.1</slf4j.version>
+		<gson.version>2.3</gson.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -145,6 +146,13 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
+		</dependency>
+		
+		<!-- gson dependency -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
 		</dependency>
 	</dependencies>
 </project>
